--- a/less/inc/post-page-styles.less
+++ b/less/inc/post-page-styles.less
@@ -442,7 +442,7 @@ h3.recent-posts,
 	  margin-right: 8px;
 	  &.facebook {
 	    position: relative;
-	    top: -4px;
+	    top: 1px;
 	  }
 	  &.gplus,
 	  &.linkedin,
